project image hover display bug, tooltip for link, project card gap in mobile size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,6 +137,10 @@ body {
   margin-top: 2rem;
 }
 
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
 ol,
 ul {
   list-style: none;
@@ -346,6 +350,48 @@ header > p {
   font-weight: 700;
   text-transform: uppercase;
   color: #c1cac5;
+}
+
+/* Tooptip */
+[data-tooltip]::before,
+[data-tooltip]::after {
+  --scale: 0;
+  --arrow-size: 8px;
+  --tooltip-color: #323232;
+  position: absolute;
+  top: -1%;
+  left: 50%;
+  transform: translateX(-50%) translateY(var(--translate-y, 0))
+    scale(var(--scale));
+  transition: 150ms transform;
+}
+
+[data-tooltip]:hover::before,
+[data-tooltip]:hover::after {
+  --scale: 1;
+}
+
+[data-tooltip]::before {
+  --translate-y: calc(-98% - var(--arrow-size));
+  content: attr(data-tooltip);
+  color: white;
+  font-size: 0.85rem;
+  padding: 0.4rem 0.9rem;
+  border-radius: 0.3rem;
+  display: flex;
+  justify-content: center;
+  width: max-content;
+  max-width: 100%;
+  background-color: var(--tooltip-color);
+  transform-origin: bottom center;
+}
+
+[data-tooltip]::after {
+  --translate-y: calc(-1 * var(--arrow-size));
+  content: '';
+  border: var(--arrow-size) solid transparent;
+  border-top-color: var(--tooltip-color);
+  transform-origin: top center;
 }
 
 /* Container */
@@ -1910,6 +1956,7 @@ header > p {
 }
 
 .image .external-links .link {
+  visibility: hidden;
   opacity: 0;
   color: #eaeaea;
   background-color: hsla(var(--primary-accent), 10%, 10%, 0.2);
@@ -1924,6 +1971,7 @@ header > p {
 }
 .image .external-links:hover > .link {
   transform: translate(0);
+  visibility: visible;
   opacity: 1;
 }
 
